--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,6 +14,10 @@
     <div class="btn-group-vertical">
 
         <a href="/progression"  class="btn btn-secondary">Progression</a>
+        <a href="/sine"  class="btn btn-secondary">Sine</a>
+        <a href="/cosine"  class="btn btn-secondary">Cosine</a>
+        <a href="/exp"  class="btn btn-secondary">Exponential</a>
+        <a href="/log"  class="btn btn-secondary">Logarithm</a>
     </div>
 </center>
 
